update modale ajout-suppression projets

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -58,11 +58,20 @@
 						<a href="#modale" class="boutonModifier">modifier</a>	
 						<aside id="modale" class="modale" aria-hidden="true" role="dialog" aria-labelledby="titlemodal" style="display:none">
 							<div class="modale-wrapper modal-stop">
-								<button class="fermerModale">fermer la boite modale</button> 
-								<h2 id="titlemodal"> Galerie photo </h2>
-								<div class="projets-disponibles">
+								<div class="icones-modale">
+									<button class="retourvue1" style="display:none">Retour</button>
+									<button class="fermerModale">fermer la boite modale</button> 
 								</div>
-								<button class="ajout-projet">Ajouter une photo</button>
+								<div class="vuemodale1">
+									<h2 id="titlemodal"> Galerie photo </h2>
+									<div class="projets-disponibles"></div>
+									<button class="ajout-projet">Ajouter une photo</button>
+								</div>
+								<div class="vuemodale2" style="display:none">
+									<h2 id="titlemodal"> Ajout photo </h2>
+									<div class="projets-disponibles"></div>
+									<button class="ajout-projet">Ajouter une photo</button>
+								</div>
 							</div>
 						</aside>
 					
