--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -11,6 +11,7 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 	<script type="module" src="connexion.js"></script>
+	
 </head>
 
 <body>
@@ -22,7 +23,7 @@
 			<nav>
 				<ul>
 					<li><a href="./index.html">projets</a></li>
-					<li>contact</li>
+					<li>contacts</li>
 					<li style="font-weight:bold">login</li>
 					<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 				</ul>
