--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -69,8 +69,8 @@
 								</div>
 								<div class="vuemodale2" style="display:none">
 									<h2 id="titlemodal"> Ajout photo </h2>
-									<div class="projets-disponibles"></div>
-									<button class="ajout-projet">Ajouter une photo</button>
+									<div></div>
+									<button class="valider-projet">Valider</button>
 								</div>
 							</div>
 						</aside>
