--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+	
 <head>
 	<meta charset="UTF-8">
 	<title>Sophie Bluel - Architecte d'intérieur</title>
@@ -7,6 +8,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+	<link rel="icon" href="data:,">
 	<link rel="shortcut icon" href="#">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
@@ -15,15 +17,15 @@
 </head>
 
 <body>
-
+	
 	<div class="content">
 
 		<header>
 			<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 			<nav>
 				<ul>
-					<li><a href="./index.html">projets</a></li>
-					<li>contacts</li>
+					<li><a href="./index.html#mes-projets">projets</a></li>
+					<li><a href="./index.html#formulaire-contact">contact</a></li>
 					<li style="font-weight:bold">login</li>
 					<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 				</ul>
@@ -31,7 +33,6 @@
 		</header>
 
 		<main>
-
 			<section id="formulaire-login">
 				<h2>Log In</h2>
 					<form action="#" method="post">
@@ -46,7 +47,6 @@
 						<a href="#">Mot de passe oublié</a>
 					</div>
 			</section>
-
 		</main>
 
 	</div>
