update alert message on form for new work - deleting css in index.html - correction on style.css and projets.js

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -56,7 +56,7 @@
 					<div class="bannerModifier">
 						<a href="#modale" class="boutonModifier"><i class="fa-regular fa-pen-to-square"></i>modifier</a>	
 						
-						<aside id="modale" class="modale" aria-hidden="true" role="dialog" aria-labelledby="titlemodal" style="display:none">
+						<aside id="modale" class="modale" aria-hidden="true" role="dialog" aria-labelledby="titlemodal">
 							<div class="modale-wrapper modal-stop">
 								<div class="vuemodale1">
 									<div class="icones-modale">
@@ -69,9 +69,9 @@
 									</div>
 								</div>
 								
-								<div class="vuemodale2" style="display:none">
+								<div class="vuemodale2">
 									<div class="icones-modale">
-										<button class="retourvue1" style="display:none"><i class="fa-solid fa-arrow-left"></i></button>
+										<button class="retourvue1"><i class="fa-solid fa-arrow-left"></i></button>
 										<button class="fermerModale"><i class="fa-solid fa-xmark"></i></button>
 									</div>
 									<h3 id="titlemodal"> Ajout photo </h3>
