--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -58,7 +58,7 @@
 						
 						<aside id="modale" class="modale" aria-hidden="true" role="dialog" aria-labelledby="titlemodal">
 							<div class="modale-wrapper modal-stop">
-								<div class="vuemodale1">
+								<div class="modal-vue-suppression-projet">
 									<div class="icones-modale">
 										<button class="fermerModale"><i class="fa-solid fa-xmark"></i></button>
 									</div>
@@ -69,9 +69,9 @@
 									</div>
 								</div>
 								
-								<div class="vuemodale2">
+								<div class="modal-vue-ajout-projet">
 									<div class="icones-modale">
-										<button class="retourvue1"><i class="fa-solid fa-arrow-left"></i></button>
+										<button class="retour-vue-suppression-projet"><i class="fa-solid fa-arrow-left"></i></button>
 										<button class="fermerModale"><i class="fa-solid fa-xmark"></i></button>
 									</div>
 									<h3 id="titlemodal"> Ajout photo </h3>
